--- a/recovery/root/init.recovery.qcom.rc
+++ b/recovery/root/init.recovery.qcom.rc
@@ -37,6 +37,7 @@ on fs
 on property:init.svc.fastbootd=running
     # Load prebuild kernel modules in fastboot mode
     mount /vendor_dlkm
+    insmod /vendor_dlkm/lib/modules/leds_aw99703.ko
     insmod /vendor_dlkm/lib/modules/ili9882_mmi.ko
     insmod /vendor_dlkm/lib/modules/msm_drm.ko
     insmod /vendor_dlkm/lib/modules/mmi_annotate.ko
